--- a/Assignments/A07_TimeSeries.Rmd
+++ b/Assignments/A07_TimeSeries.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 7: Time Series Analysis"
-author: "Student Name"
+author: "Jackie Van Der Hout"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -29,6 +29,14 @@ The completed exercise is due on Monday, March 14 at 7:00 pm.
 
 ```{r}
 #1
+getwd()
+library(plyr)
+library(tidyverse)
+library(lubridate)
+library(zoo)
+library(Kendall)
+library(tseries)
+
 
 ```
 
@@ -37,8 +45,11 @@ The completed exercise is due on Monday, March 14 at 7:00 pm.
 
 ```{r, message = FALSE}
 #2
+OzoneFiles = list.files(path = "../Data/Raw/Ozone_TimeSeries/", pattern="*.csv", full.names=TRUE)
+OzoneFiles
 
-
+GaringerOzone <- OzoneFiles %>%
+  ldply(read.csv) 
 ```
 
 ## Wrangle
@@ -53,13 +64,19 @@ The completed exercise is due on Monday, March 14 at 7:00 pm.
 
 ```{r}
 # 3
+GaringerOzone$Date <- as.Date(GaringerOzone$Date, format = "%m/%d/%Y")
+class(GaringerOzone$Date)
 
 # 4
+GaringerOzone <- GaringerOzone %>% 
+  select(Date, Daily.Max.8.hour.Ozone.Concentration, DAILY_AQI_VALUE)
 
 # 5
+Days <- data.frame("Date" = seq(as.Date("2010/01/01"),(as.Date("2019/12/31")), by="day")) %>%
+  mutate(Date=ymd(Date))
 
 # 6
-
+GaringerOzone <- left_join(Days, GaringerOzone, by = c("Date"))
 ```
 
 ## Visualize
@@ -68,10 +85,14 @@ The completed exercise is due on Monday, March 14 at 7:00 pm.
 
 ```{r}
 #7
+ggplot(GaringerOzone, aes(x = Date, y = Daily.Max.8.hour.Ozone.Concentration))+
+  geom_line()+
+  geom_smooth(method = lm, SE = FALSE)+
+  labs(y = "Daily Max Ozone PPM")
 
 ```
 
->Answer: 
+>Answer: Without adjusting for seasonality, it seems like there is an overall downward trend in ozone concentration. 
 
 ## Time Series Analysis
 
@@ -81,16 +102,23 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 ```{r}
 #8
-
+GaringerOzone_clean <- 
+  GaringerOzone %>% 
+  mutate(PPM.clean = zoo::na.approx(Daily.Max.8.hour.Ozone.Concentration))
 ```
 
-> Answer:  
-
+> Answer:  Linear interpolation is best for short periods of missing data, and is utilized to approximate the missing values as they fall between the surrounding data points, which is a good fit for the amount of missing data and the linear nature of the data within short periods of time used here. Whereas the Piecewise constant asumes that measurements are equal to what is surrounding, rather than changing linearly, and the spline approach is quadratic as opposed to linear, and would not provide the proper trend for this data. 
 
 9. Create a new data frame called `GaringerOzone.monthly` that contains aggregated data: mean ozone concentrations for each month. In your pipe, you will need to first add columns for year and month to form the groupings. In a separate line of code, create a new Date column with each month-year combination being set as the first day of the month (this is for graphing purposes only)
 
 ```{r}
 #9
+GaringerOzone.monthly <- GaringerOzone_clean %>% 
+  mutate(month = lubridate::month(Date),
+         year = lubridate::year(Date))%>%
+  mutate(Date = my(paste0(month,"-",year))) %>%
+  dplyr::group_by(Date, year, month) %>% 
+  dplyr::summarise(MeanOzone = mean(PPM.clean))
 
 ```
 
@@ -99,8 +127,15 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 ```{r}
 #10
+dailyfday <- day(first(GaringerOzone_clean$Date))
+dailyfmonth <- month(first(GaringerOzone_clean$Date))
+dailyfyear <- year(first(GaringerOzone_clean$Date))
+monthlyfmonth <- month(first(GaringerOzone.monthly$Date))
+monthlyfyear <- year(first(GaringerOzone.monthly$Date))
 
+GaringerOzone.daily.ts <- ts(GaringerOzone_clean$PPM.clean, start = c(dailyfday, dailyfmonth, dailyfyear), frequency = 365)
 
+GaringerOzone.monthly.ts <- ts(GaringerOzone.monthly$MeanOzone, start = c(monthlyfmonth, monthlyfyear), frequency = 12)
 ```
 
 
@@ -108,8 +143,11 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 ```{r}
 #11
+GaringerOzone.daily.ts_Decomposed <- stl(GaringerOzone.daily.ts, s.window = "periodic")
+GaringerOzone.monthly.ts_Decomposed <- stl(GaringerOzone.monthly.ts, s.window = "periodic")
 
-
+plot(GaringerOzone.daily.ts_Decomposed)
+plot(GaringerOzone.monthly.ts_Decomposed)
 ```
 
 
@@ -118,24 +156,36 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 ```{r}
 #12
 
+?SeasonalMannKendall
+ozone_data_trend1 <- Kendall::SeasonalMannKendall(GaringerOzone.monthly.ts)
+ozone_data_trend1
+summary(ozone_data_trend1)
 
-
+ozone_data_trend2 <- trend::smk.test(GaringerOzone.monthly.ts)
+ozone_data_trend2
+summary(ozone_data_trend2)
+#same results but smk.test provides more detailed monthly breakdown
 ```
 
-> Answer:  
+> Answer: The rest assume non-seasonal data, this data is seasonal so the seasonal Mann-Kendall is the most appropriate choice. It provides a monthly score to allow for trends to be compared from month to month over a vector of time series of monthly values. 
 
 13. Create a plot depicting mean monthly ozone concentrations over time, with both a geom_point and a geom_line layer. Edit your axis labels accordingly.
 
 ```{r}
 # 13
-
-
+ozone_data_plot <-ggplot(GaringerOzone.monthly, aes(x = Date, y = MeanOzone)) +
+  geom_point(alpha = 0.5) +
+  geom_line() +
+  ylab("Mean Ozone Concentration PPM") +
+  geom_smooth( method = lm)+
+  theme_light()
+print(ozone_data_plot)
 
 ```
 
 14. To accompany your graph, summarize your results in context of the research question. Include output from the statistical test in parentheses at the end of your sentence. Feel free to use multiple sentences in your interpretation.
 
-> Answer: 
+> Answer: The mean monthly ozone concentration at Garinger High School in North Carolina from 2010-2019 show a declining trend (2-sided pvalue =0.046724). The Seasonal Mann Kendall S-score (-77) allowed for a rejection of the null hypothesis, supporting the identification of a downward trend in mean ozone concentration. 
 
 15. Subtract the seasonal component from the `GaringerOzone.monthly.ts`. Hint: Look at how we extracted the series components for the EnoDischarge on the lesson Rmd file.
 
@@ -143,9 +193,20 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 ```{r}
 #15
+GaringerOzone_Components <- as.data.frame(GaringerOzone.monthly.ts_Decomposed$time.series[,1:3])
 
+#should we be using left join? 
+GaringerOzone_Components <- mutate(GaringerOzone_Components,
+        MeanOzone = GaringerOzone.monthly$MeanOzone,     
+        Date = GaringerOzone.monthly$Date, 
+        NonSeasonalOzone = GaringerOzone.monthly$MeanOzone - GaringerOzone_Components$seasonal)
 #16
+ozone_nonseasona_trend <- Kendall::MannKendall(GaringerOzone_Components$NonSeasonalOzone)
+ozone_nonseasona_trend
+summary(ozone_nonseasona_trend)
 
+#compared to prior
+summary(ozone_data_trend1)
 ```
 
-> Answer: 
+> Answer: Non-seasonal time-series analysis allows for a stronger trend to be detected (2-sided p-value =0.0075402, S-score = -1179) compared with a seasonal time-series analysis (2-sided p-value = 0.046724, s-score = -77) by subtracting seasonal components to better view overall trends over time. 
