--- a/Lessons/08_Part2_SpatialAnalysis.Rmd
+++ b/Lessons/08_Part2_SpatialAnalysis.Rmd
@@ -44,11 +44,14 @@ The typical set up procedure: confirm the working directory and import libraries
 getwd()
 
 #Import libraries
+library(dplyr)
 library(tidyverse)
 library(lubridate)
 library(sf)
 library(mapview)
 library(RColorBrewer)
+library(leaflet)
+library(leafsync)
 ```
 
 # 2 READING IN SPATIAL DATA
@@ -117,19 +120,19 @@ mapView(counties_sf, zcol = "AWATER")
 
 ```{r read HUCs shapefile}
 #Read the shapefile into an sf dataframe named "huc8_sf"
-
+huc8_sf <- st_read('./Data/Spatial/NCHUC8.shp')
 
 #Reveal the columns
-
+colnames(huc8_sf)
 
 #Check the CRS
-
+st_crs(huc8_sf) #WGS84
 
 #Examine some records
-
+head(counties_sf)
 
 #View the data as a map, colored by the acreage in each
-
+mapView(huc8_sf, zcol = "ACRES")
 
 ```
 
@@ -139,11 +142,13 @@ mapView(counties_sf, zcol = "AWATER")
 
 ```{r Select the Upper Neuse HUC 8}
 #Read the shapefile into an sf dataframe
-
-
+neuse <- st_read('./Data/Spatial/NCHUC8.shp') %>% 
+  filter(SUBBASIN == 'Upper Neuse')
 
 #Create a map
-
+ggplot()+
+  geom_sf(data = huc8_sf, fill ='orange')+
+  geom_sf(data = neuse, fill = 'purple')
 
 ```
 
@@ -211,17 +216,17 @@ svi2018_nc_raw <- read.csv(
 #Check structure
 str(svi2018_nc_raw)
 
-#Join the SVI attributes to the county spatial features
+#Option 1 - Join the SVI attributes to the county spatial features
 counties_sf_join <-  merge(x = counties_sf,
                            y = svi2018_nc_raw, 
                            by.x = "GEOID", 
                            by.y = "FIPS" )
 
-#Tidyverse version of the join
+#Option 2 - Tidyverse version of the join
 counties_sf_join <- counties_sf %>% 
   left_join(svi2018_nc_raw, by = c("GEOID" = "FIPS") )
 
-#View with mapview
+#View with mapview (prettier and more interactive)
 mapview(counties_sf_join, 
         zcol = 'E_POV', 
         col.regions = brewer.pal(2, 'RdBu')) + 
@@ -239,19 +244,25 @@ ggplot() +
 
 ```{r}
 #Compute HUC8 wind energy
+EPAWindEnergy <- st_read('https://raw.githubusercontent.com/ENV859/EnviroAtlasData/main/Wind_Energy.csv')
 
+EPAWindEnergy$HUC_12 <- as.numeric(EPAWindEnergy$HUC_12)  
+EPAWindEnergy$AvgWindEnergy <- as.numeric(EPAWindEnergy$AvgWindEnergy)  
 
-
+EPAWindEnergy <- EPAWindEnergy %>% 
+  mutate(WindEnergySum = sum(AvgWindEnergy)) %>% 
+  mutate(HUC_8 = substr(HUC_12, 1,8)) %>%
+  group_by(HUC_8)
 
 #Join to HUC_8 features
-
-
-
+huc8_sf_join = left_join(EPAWindEnergy, huc8_sf, by = "HUC_8")
 
 #View the outputs
-
-
-
+##this is not working for me 
+#error: stat_sf requires the following missing aesthetics: geometry
+ggplot(data = huc8_sf_join)+
+  geom_sf(aes(fill=WindEnergySum))+
+  labs(title = 'Wind Energy by HUC 8', fill = 'MW/year')
 ```
 
 ## 3.1 Spatial data aggregation with `group_by` and `summarize`.
@@ -274,18 +285,17 @@ mapview(state_sf)
 
 ```{r Aggregate the HUC data on an attribute, saving as huc2_sf}
 #List the unique values in the DWQ_Basin field
-
-
-
-
-#Summarize on DWQ Basin value
-
-
-
-
+huc2_sf <- huc8_sf %>%
+  select(SQ_MILES, ACRES, HUC_8, DWQ_Basin, geometry) %>% 
+  group_by('DWQ_Basin')
   
-#Map the data
+#Summarize on DWQ Basin value
+Watersheds <- Watersheds %>%  
+  summarize(ACRES = sum(ACRES)) %>% 
+  #summarize(SQ_MILES = sum(SQ_MILES)) - not found??
 
+#Map the data
+mapview(Watersheds)
 ```
 
 ## 3.2 Transforming coordinate reference systems of datasets
@@ -337,22 +347,24 @@ myMap = mapview(neuse_sf,
 #Show the map
 myMap
 
-#Select intersecting counties using matrix subsetting
+#option 1 Select intersecting counties using matrix subsetting
 neuse_intersect_1 <- counties_sf_utm[neuse_sf,]
 
-#Select intersecting counties using the `filter()` command
+#option 2 Select intersecting counties using the `filter()` command
 neuse_intersect_2 <- counties_sf_utm %>% 
   filter(st_intersects(x = ., y = neuse_sf, sparse = FALSE))
 
 #View the result
 myMap + mapview(neuse_intersect_2, alpha.regions = 0)
 
+#option 3 - best option
 #Actually intersect the counties (not just select those that intersect)
 neuse_counties_sf <- neuse_sf %>% 
   st_intersection(counties_sf_utm)
 myMap + mapview(neuse_counties_sf, alpha.regions = 0)
 
 #Update the area the features, now that some are clipped
+###mutation not working 
 neuse_counties_sf <- neuse_counties_sf %>% 
   mutate(Area_m2 = st_area(neuse_counties_sf$geometry)) %>% 
   as.numeric()
