--- a/Assignments/A09_DataScraping.Rmd
+++ b/Assignments/A09_DataScraping.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 09: Data Scraping"
-author: "Student Name"
+author: "Jackie Van Der Hout"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -30,13 +30,15 @@ This exercise accompanies the lessons in Environmental Data Analytics on data sc
 
 ```{r, message = FALSE}
 #1
-
-
+getwd()
+library(tidyverse)
+library(rvest)
+library(lubridate)
+theme_set(theme_light())
 ```
 
 2. We will be scraping data from the NC DEQs Local Water Supply Planning website, specifically the Durham's 2019 Municipal Local Water Supply Plan (LWSP): 
  * Navigate to https://www.ncwater.org/WUDC/app/LWSP/search.php
- * Change the date from 2020 to 2019 in the upper right corner.
  * Scroll down and select the LWSP link next to Durham Municipality. 
  * Note the web address: <https://www.ncwater.org/WUDC/app/LWSP/report.php?pwsid=03-32-010&year=2020>
 
@@ -45,7 +47,8 @@ Indicate this website as the as the URL to be scraped. (In other words, read the
 
 ```{r set.the.scraping.website}
 #2
-
+webpage <- read_html('https://www.ncwater.org/WUDC/app/LWSP/report.php?pwsid=03-32-010&year=2020')
+webpage
 
 ```
 
@@ -57,7 +60,8 @@ Indicate this website as the as the URL to be scraped. (In other words, read the
  * Ownership
  
 * From the "3. Water Supply Sources" section:
- * Average Daily Use (MGD) - for each month
+ * Max Daily Use (MGD) - for each month 
+
 
 In the code chunk below scrape these values, assigning them to three separate variables.
 
@@ -65,10 +69,17 @@ In the code chunk below scrape these values, assigning them to three separate va
 
 ```{r scrape.the.data}
 #3
-water.system.name <- 
-pswid <- 
-ownership <- 
-max.withdrawals.mgd <- 
+water.system.name <- webpage %>% html_nodes("div+ table tr:nth-child(1) td:nth-child(2)") %>% html_text
+water.system.name
+
+pswid <- webpage %>% html_nodes("td tr:nth-child(1) td:nth-child(5)") %>% html_text
+pswid
+
+ownership <- webpage %>% html_nodes("div+ table tr:nth-child(2) td:nth-child(4)") %>% html_text
+ownership
+
+max.withdrawals.mgd <- webpage %>% html_nodes("th~ td+ td") %>% html_text
+max.withdrawals.mgd
 
 ```
 
@@ -83,12 +94,23 @@ max.withdrawals.mgd <-
 
 ```{r create.a.dataframe.from.scraped.data}
 #4
-
+df_withdrawals <- data.frame("Month" = rep(1:12),
+                             "Year" = (2020),
+                             "WaterSystem" = water.system.name,
+                             "pswid" = pswid,
+                             "Ownership" = ownership,
+                             "MaxWithdrawlMGD" = as.numeric(max.withdrawals.mgd)) %>% 
+  mutate(Date = my(paste(Month,"-",Year)))
 
 
 #5
-
-
+ggplot(df_withdrawals, aes(x=Date, y= MaxWithdrawlMGD)) + 
+  geom_line() + 
+  geom_smooth(method="loess",se=FALSE) +
+  labs(title = paste("2020 Water usage data for", water.system.name),
+       subtitle = ownership,
+       y="Withdrawal (mgd)",
+       x="Date")
 
 ```
 
@@ -96,8 +118,37 @@ max.withdrawals.mgd <-
 
 ```{r construct.a.scraping.function}
 #6.
+the_year <- 2020 
 
-
+scrape.it <- function(pswid, the_year){
+  
+  #Retrieve the website contents 
+  the_website <- read_html(paste0('https://www.ncwater.org/WUDC/app/LWSP/report.php?' , 
+                                  'pwsid=', pswid, '&year=', the_year))
+  
+  #Set the element address variables (determined in the previous step)
+  water.system.name_tag <- '.table tr:nth-child(1) td:nth-child(2)'
+  pswid_tag <- 'tr:nth-child(2) th+ .left:nth-child(2)'
+  ownership_tag <- 'tr:nth-child(2) .left~ .left+ td.left'
+  max.withdrawals.mgd_tag <- '.table:nth-child(7) td:nth-child(7) , .table:nth-child(7) td:nth-child(3)'
+  
+  #Scrape the data items
+  water.system.name.scrape <- the_website %>% html_nodes(water.system.name_tag) %>% html_text()
+  pswid.scrape <- the_website %>%   html_nodes(pswid_tag) %>%  html_text()
+  ownership.scrape <- the_website %>% html_nodes(ownership_tag) %>% html_text()
+  withrdrawls.scrape <- the_website %>% html_nodes(max.withdrawals.mgd_tag) %>% html_text()
+  
+  #Convert to a dataframe
+  df_withdrawals.scraped <- data.frame("Month" = rep(1:12),
+                             "Year" = rep(the_year, 12),
+                             "WaterSystem" = as.character(water.system.name.scrape),
+                             "pswid" = pswid.scrape,
+                             "Ownership" = ownership.scrape,
+                             "MaxWithdrawlMGD" = as.numeric(withrdrawls.scrape)) %>% 
+  mutate(Date = my(paste(Month,"-",Year)))
+  
+  return(df_withdrawals.scraped)
+}
 
 ```
 
@@ -105,25 +156,44 @@ max.withdrawals.mgd <-
 
 ```{r fetch.and.plot.Durham.2015.data}
 #7
-
-
+Durham_2015 <- scrape.it('03-32-010',2015)
 ```
 
 8. Use the function above to extract data for Asheville (PWSID = 01-11-010) in 2015. Combine this data with the Durham data collected above and create a plot that compares the Asheville to Durham's water withdrawals.
 
-```{r fetch.and.plot.Durham.2015.data}
-#8
+```{r fetch.and.plot.Asheville.2015.data}
+#8a
+Asheville_2015 <- scrape.it('01-11-010',2015)
+view(Asheville_2015)
 
+#8b
+Withdrawls2015 <- bind_rows(Durham_2015, Asheville_2015)
 
+#8c
+ggplot(Withdrawls2015,aes(x=Date, y= MaxWithdrawlMGD, color = WaterSystem)) + 
+  geom_line() + 
+  geom_smooth(method="loess",se=FALSE) +
+  labs(title = "Municipal Water Withdrawls in 2015", subtitle = "Durham and Asheville", y= "Withdrawal (mgd)", x="Date", color = "City")
 ```
 
 
 9. Use the code & function you created above to plot Asheville's max daily withdrawal by months for the years 2010 thru 2019.Add a smoothed line to the plot.
 
 ```{r}
-#9
+#9a
+the_years = rep(2010:2019)
 
+Asheville10_19 <- the_years %>% 
+  map(scrape.it, pswid = '01-11-010') %>% 
+  bind_rows()
+view(Asheville10_19)
 
+#9b
+ggplot(Asheville10_19,aes(x=Date, y= MaxWithdrawlMGD)) + 
+  geom_line() + 
+  geom_smooth(method="loess",se=FALSE) +
+  labs(title = "Asheville Municipal Water Withdrawls", subtitle = "2010 - 2019", y= "Withdrawal (mgd)", x="Date", color = "City")
 ```
 
 >Question: Just by looking at the plot (i.e. not running statistics), does Asheville have a trend in water usage over time?
+Yes, there seems to be a sharp increase in water usage in Asheville over time. 
